--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
-server.port=8080
+server.port=8088
+
+ej.job.zk.host=127.0.0.1:2181
+
+### mybatis
+mybatis.mapper-locations=classpath:/mapper/*Mapper.xml
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/ej_job?Unicode=true&characterEncoding=UTF-8&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=000000
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
